--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -2,7 +2,7 @@
 <html>
     <title>Privacy Policy</title>
     <h1>Privacy Policy</h1>
-    <p>scshow.work does NOT correct data from your browser.</p>
+    <p>scshow collects your Google Account ID and G Suite group-name for analyzing usage.</p>
     <p>scshow uses Skyway that is provided by NTT Communications.</p>
     <p>This application does NOT expect using from EU / by people protected GDPR.</p>
 </html>
